--- a/latex/main.tex
+++ b/latex/main.tex
@@ -2,9 +2,15 @@
 
 \usepackage{fullpage}
 \usepackage{url}
+\usepackage{graphicx}
+\usepackage{multicol}
 
 \title{The Generation of Phishing Domain Names with a Recurrent Neural Network}
-\author{Kaspar Hageman}
+\author{
+Kaspar Hageman \\
+Aalborg University, Denmark \\
+{\tt kh@es.aau.dk}
+}
 
 \begin{document}
 \maketitle
