--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-Phishing attacks pose a major threat to everyday Internet users, in which victims are persuaded to disclose personal or sensitive information through digital means.
+Phishing attacks pose a major threat to Internet users, in which victims are persuaded through impersonation to disclose personal or sensitive information through digital means.
 Possibly the most well-known variant is the fake email sent from someone, who claims to be working at a bank or another trustworthy party, asking to visit a website to enter some information.
 These phishing emails attempt to persuade their victims to visit a website that looks and feels similar to the one of the targeted brand, but is actually under control of the attacker.
 
@@ -11,8 +11,10 @@ These domains being registered solely for executing phishing attacks are referre
 There is a benefit for the general Internet community to identify these domains and to take countermeasures as soon as possible.
 In this project, a recurrent neural network is implemented, with the goal of being to generate phishing domains.
 The project is a attempt to demonstrate of how a recurrent neural network can capture the specific characteristics of domains in general and phishing domains specifically. 
+The implementation of the network can be found on GitHub\footnote{\url{https://github.com/kdhageman/phishing_generator}}.
+
 
 \subsection{Covered course material}
 The primary course material that inspired this project was the introduction to PyTorch by Adam Paszke.
 My previous experience with machine learning tools was primarily in {\tt MATLAB} and {\tt scikit-learn}, motivating me to use PyTorch for this project.
-The developed neural network in this project is influenced by both the RNN demonstration in the course, as well as one of the PyTorch tutorials\footnote{\url{https://pytorch.org/tutorials/intermediate/char_rnn_generation_tutorial.html}}.
+The developed neural network in this project is influenced by both the recurrent neural network demonstration in the course, as well as one of the PyTorch tutorials\footnote{\url{https://pytorch.org/tutorials/intermediate/char_rnn_generation_tutorial.html}}.
