--- a/latex/main.tex
+++ b/latex/main.tex
@@ -4,6 +4,8 @@
 \usepackage{url}
 \usepackage{graphicx}
 \usepackage{multicol}
+\usepackage{booktabs}
+\usepackage{multirow}
 
 \title{The Generation of Phishing Domain Names with a Recurrent Neural Network}
 \author{
@@ -20,5 +22,4 @@ Aalborg University, Denmark \\
 \input{results}
 \input{discussion}
 
-The code can be found on GitHub\footnote{\url{https://github.com/kdhageman/phishing_generator}}.
 \end{document}
