--- a/latex/discussion.tex
+++ b/latex/discussion.tex
@@ -1,35 +1,44 @@
 \section{Discussion}
-
-\subsection{Training}
-The impact of learning rate ended up having little effect, because the model seems to converge rather quickly, even with a small learning rate.
-Similarly, the size of the hidden layer had little impact on the training loss.
-
-\subsection{Domain generation}
-By observing a set of generated domains, there are several interesting observations.
-
-\paragraph{Number as starting character}
-Whenever a number is used as the starting number, the generated domain tends to be either (1) very short (e.g. {\tt 5.com} or (2) follow an IP address-like structure (e.g. {\tt 9.19.152.283-328-538-252-558-420-179.49.278.283}).
-In the previous example, an IP address ({\tt 9.19.152.283}) seems to get mixed with strings of dash ("-") delimited integers ({\tt 328-538-252-558}).
-An interesting observation is that the IP address-like domains contain invalid IP addresses (a single integer within the IP address cannot exceed 255).
-Generally speaking, it seems that the model has learned itself to not mix integers with characters.
+By manually observing a set of generated domains, we can observe several interesting patterns in the domains names that the RNN tends to generate.
 
 \paragraph{Domain name structure}
 A domain name is composed of several {\it labels}, which represents a hierarchical structure within the domain name.
 The labels are delimited by a dot ({\tt .}), where the labels (when read right to left) become more detailed. 
 For instance, the right-most label {\tt dk} in {\tt www.example.dk} describes that the domain resides within the Danish domain space, whereas the left label {\tt www} denotes the very specific notion of the domain hosting a web server.
-The right-most label in a domain name is referred to as the top-level domain.
+The right-most label (and in cases such as {\tt co.uk} multiple labels) in a domain name is referred to as the top-level domain (TLD).
+The label next to the TLD is generally referred to as the second level domain (or 2LD), whereas the remaining set of labels combined is the subdomain of the domain.
 
-The vast majority of the generated domains follows a common domain name structure of having either two or three labels (excluding the aforementioned IP address-like domains).
-Interestingly, almost all of these domains have the {\tt .com} (or very close related) top-level domain.
-Out of all domains in the training set that have a traditional domain name structure (i.e. ending with valid top level domain), just 56.7\% have the {\tt .com} top level domain. 
-Additionally, the {\tt com} label seems to appear in generated domains names not only at the end of a domain name, but also in other places.
-For instance, consider the domain {\tt lonterestine.com.account-infore.com.com}, which contains the string {\tt .com} three times.
-Concluding, in the generated set of domains, the {\tt .com} top-level domain seems to be overrepresented.
+Table \ref{tab:statistics} shows an overview of several statistical measures of $T$ and $G$. 
+The RNN tends to generate shorter domains than the training set (average length of 20.5 compared to 26.0), although the number of labels is on average almost equal.
+The standard deviation in both measures is significantly lower though, suggesting that the generated domains tend to lie closer to each other in terms of domain length and label count.
 
-\paragraph{The PayPal syndrome}
-As an online payment service, PayPal is one of the most targeted brands when it comes to phishing attacks.
-We can see this representation, since many generated domains (in particular those that start with {\tt p}) contain the string {\tt paypal}.
+Domain names can only be registered under standardized TLDs (see the public suffix list\footnote{https://publicsuffix.org/}).
+In the training set, 95.2\% of domains contained a valid TLD, where the majority of the 4.9\% invalid domains consists of IP addresses (3.95\% of all training samples).
+The generated domains however, only consist of 58\% valid domains. 
+Manual inspection of these invalid domain indicates that the generated domains range from almost valid ones (e.g. {\tt iom} or {\tt cou}), to completely bogus ones (e.g. {\tt pverelinybneebioln} or {\tt llaperocre}).
+
+\begin{table}[t]
+\centering
+\caption{Summary of the training- and generated dataset, $T$ and $G$}
+\label{tab:statistics}
+\begin{tabular}{@{}llp{1cm}p{1cm}@{}}
+\toprule
+              &                         & $T$  & $G$  \\ \midrule
+\multirow{2}{*}{Domain length} & $\mu$                   & 26.0 & 20.5 \\ 
+              & $\sigma$ & 20.5 & 16.3 \\ \midrule
+\multirow{2}{*}{Label count}   & $\mu$                   & 3.4  & 3.3  \\ 
+              & $\sigma$                & 2.2  & 1.6  \\ \midrule
+Valid TLDs    & \%                      & 95.2 & 58.0 \\ \bottomrule
+\end{tabular}
+\end{table}
+
+\paragraph{IP addresses}
+As mentioned previously, the training set contains several domains in the form of IP addresses (e.g. {\tt 111.222.333.443}).
+The set of generated domains contains 0.31\% of domains that can be considered to fall in the same category (i.e. having a number as its first character).
+A manual inspection seems to indicate that the RNN has not learned from the training set to properly generate an IP address.
+Some generated domains contain only two integer (e.g. {\tt 72.171}), whereas others also contain letters (e.g. {\tt 1pp1}).
 
 \subsection{Conclusion}
-The project proved to be an interesting introduction to recurrent neural networks and gave some interesting insights in the patterns that a recurrent neural network learns.
-There are many improvements to be made, most notably the introduction of more 
+The domain generator has learned the basics of domain generation: generate domains with a length and label count that resembles actual domains.
+However, notable restrictions on domain name were not captured, such as the restriction on TLDs and the structure of IP addresses.
+One interesting approach for future work would to introduce Long short-term memory (LSTM) units to the network, since these units tend to be better at capturing information in much older time steps rather than recent steps.
